--- a/capital-quest/package.json
+++ b/capital-quest/package.json
@@ -13,9 +13,11 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "history": "^5.3.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.26.0",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
