--- a/capital-quest/package.json
+++ b/capital-quest/package.json
@@ -16,8 +16,11 @@
     "history": "^5.3.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-router-dom": "^6.26.0",
+    "react-use": "^17.5.1",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
