--- a/capital-quest/package.json
+++ b/capital-quest/package.json
@@ -17,6 +17,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-confetti": "^6.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-native-confetti-cannon": "^1.5.2",
     "react-router-dom": "^6.26.0",
