--- a/capital-quest/package.json
+++ b/capital-quest/package.json
@@ -16,10 +16,12 @@
     "history": "^5.3.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-confetti": "^6.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "react-native-confetti-cannon": "^1.5.2",
     "react-router-dom": "^6.26.0",
     "react-use": "^17.5.1",
